force-app/main/default/objects/ErrorTransactionLog__c/ErrorTransactionLog__c.object-meta.xml
<CustomObject>
    <label>ErrorTransactionLog</label>
    <nameField>
        <label>ErrorTransactionLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ErrorTransactionLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>