force-app/main/default/objects/ErrorTransactionLog__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <label>Class Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>