force-app/main/default/objects/ErrorTransactionLog__c/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <label>Method Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>